[gd_scene format=3 uid="uid://do7fs5anfwcj8"]

[ext_resource type="Script" uid="uid://ibrlbqeab4fb" path="res://user_interface/pause/pause.gd" id="1_ejkxy"]

[sub_resource type="LabelSettings" id="LabelSettings_pehvm"]
font_size = 48

[node name="Pause" type="Control" unique_id=1128720161 node_paths=PackedStringArray("_default_button")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejkxy")
_default_button = NodePath("VBoxContainer/ResumeButton")

[node name="ColorRect" type="ColorRect" parent="." unique_id=263541688]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5921569)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=583372843]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.25
offset_top = -86.0
offset_right = 75.25
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer" unique_id=963024112]
layout_mode = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_pehvm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer" unique_id=1713108131]
layout_mode = 2
text = "Resume"

[node name="FullscreenButton" type="CheckButton" parent="VBoxContainer" unique_id=1539547698]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"
alignment = 1

[node name="QuitButton" type="Button" parent="VBoxContainer" unique_id=1917403846]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="toggled" from="VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
